tests/ui/object-safety/object-safety-supertrait-mentions-GAT.stderr
error: associated item referring to unboxed trait object for its own trait
  --> $DIR/object-safety-supertrait-mentions-GAT.rs:8:20
   |
LL | trait SuperTrait<T>: for<'a> GatTrait<Gat<'a> = T> {
   |       ---------- in this trait
LL |     fn c(&self) -> dyn SuperTrait<T>;
   |                    ^^^^^^^^^^^^^^^^^
   |
help: you might have meant to use `Self` to refer to the implementing type
   |
LL |     fn c(&self) -> Self;
   |                    ~~~~

error[E0038]: the trait `SuperTrait` cannot be made into an object
  --> $DIR/object-safety-supertrait-mentions-GAT.rs:8:20
   |
LL |     fn c(&self) -> dyn SuperTrait<T>;
   |                    ^^^^^^^^^^^^^^^^^ `SuperTrait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-supertrait-mentions-GAT.rs:2:10
   |
LL |     type Gat<'a>
   |          ^^^ ...because it contains the generic associated type `Gat`
...
LL | trait SuperTrait<T>: for<'a> GatTrait<Gat<'a> = T> {
   |       ---------- this trait cannot be made into an object...
   = help: consider moving `Gat` to another trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
